# crypto-trading-automation

./: .eslintrc.json  .gitignore  ALGO_TRIGGER_README.md  CLOUDFLARE_SETUP.md  DATABASE_LIMITS_README.md  MONITOR_README.md  README.md  SETUP.md  auto_sell_orders.py  blacklist_manager.py  cancel_pending_limits.py  cancel_pending_triggers.py  check_sell_triggers.py  check_timezone.py  cleanup_project_files.py  cloudflare-worker.js  config_manager.py  create_algo_triggers.py  create_announcements_table.sql  create_blacklist_table.sql  crontab_config.txt  crontab_final.txt  crontab_fixed.txt  crontab_simple.txt  crypto_matcher.py  database.db  env.example  fetch_filled_orders.py  filled_orders.db  filled_orders.db-journal  get_btc_price.py  limits.json  migrate_limits_to_db.py  monitor_delist.py  next.config.js  okx_client.py  package-lock.json  package.json  protection_manager.py  pyproject.toml  (+18 more)
.github/workflows/: crypto-trading.yml  trading.yml
.wrangler/tmp/bundle-A9hXSX/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-bblGVI/: cloudflare-worker.js  cloudflare-worker.js.map
api/: okx_flask.py
app/: globals.css  layout.tsx  page.tsx
backups/: monitor_delist_original_backup.py
components/: Dashboard.tsx  PortfolioOverview.tsx  TradeHistory.tsx  TradingInterface.tsx
lib/: algo-buy.ts  algo-trading.ts  database.py  okx.ts  supabase.ts  trading-strategy.ts
scripts/: execute-algo-trading.js  test-algo-trading.js  test-okx.js
services/trading/: algo-buy.service.ts
tests/: test_order_safety.py
types/: opossum.d.ts  trading.ts
(+8 files in other folders)
