[project]
name = "crypto-trading-automation"
version = "1.0.0"
description = "OKX cryptocurrency trading automation scripts"
authors = [
    {name = "Crypto Trading Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "python-okx==0.4.0",
    "psycopg2-binary==2.9.10",
    "tenacity==9.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[tool.uv]
dev-dependencies = []
